--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pytest flask
+        pip install pylint pytest flask flask-cors
     - name: Pylint
       run: pylint `ls -R|grep .py$|xargs`
     - name: Pytest
